--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,4 +9,5 @@ services:
     container_name: virtual-desktop-contained
     command: "vncserver -localhost no -geometry 1920x1080 -depth 32"
     ports:
-    - "5901:5901"
+      - "5901:5901"
+    entrypoint: "/bin/sh"
