--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,9 @@ services:
       dockerfile: Dockerfile
     image: shinchven/virtual-desktop-contained
     container_name: virtual-desktop-contained
-    command: "vncserver -localhost no -geometry 1920x1080 -depth 32"
+    stdin_open: true
+    tty: true
+    command: "sh -c 'vncserver -localhost no -geometry 1920x1080 -depth 32' && /bin/bash"
     ports:
       - "5901:5901"
-    entrypoint: "/bin/sh"
+
